force-app/main/default/objects/AO_Form__c.object
<CustomObject>
    <description>Object to capture the specific of Forms i.e. Name, Label, active etc</description>
    <fields>
        <fullName>AO_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to activate/deactivate a Form for selection under Program</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AO_Form_Description__c</fullName>
        <description>Provide any description needed for Form</description>
        <inlineHelpText>Provide any description needed for Form</inlineHelpText>
        <label>Form Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AO_Form_Display_Name__c</fullName>
        <description>Populate name of form needs be visible for Student</description>
        <inlineHelpText>Populate name of form needs be visible for Student</inlineHelpText>
        <label>Form Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of columns the form has</description>
        <inlineHelpText>The number of columns the form has</inlineHelpText>
        <label>Columns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_URL__c</fullName>
        <description>URL to navigate to post Form Submission</description>
        <label>Completion URL</label>
        <type>Url</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>Active_Forms</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AO_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Forms</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AO_Form_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>Monash_Abroad</fullName>
        <active>true</active>
        <label>Monash Abroad</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>